# auto-dgm

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
auto_dgm/: __init__.py  round_maker.py  round_settings.py  settings.py  site.py
config/: config.sample.yml
