[tool.poetry]
name = "auto-dgm"
version = "0.1.0"
description = ""
authors = ["Andreas Bergem <bergem.andreas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.4.3"
webdriver-manager = "^3.8.5"
PyYAML = "^6.0"
python-dotenv = "0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
